// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render align 1`] = `
<div
  class="wp-components-grid css-156q9yw"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-grid css-4ppph3"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render custom columns 1`] = `
<div
  class="wp-components-grid css-1qm0ytl"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render custom rows 1`] = `
<div
  class="wp-components-grid css-1e1ggo"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render custom templateColumns 1`] = `
<div
  class="wp-components-grid css-1ap4374"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render custom templateRows 1`] = `
<div
  class="wp-components-grid css-quh8ke"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render gap 1`] = `
<div
  class="wp-components-grid css-1js3l93"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render isInline 1`] = `
<div
  class="wp-components-grid css-5m6l8n"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;

exports[`props should render justify 1`] = `
<div
  class="wp-components-grid css-ag6g0m"
  data-g2-c16t="true"
  data-g2-component="Grid"
>
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
  <div
    class="wp-components-view css-1ihlkjd"
    data-g2-c16t="true"
    data-g2-component="View"
  />
</div>
`;
